scrollbar-fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -257,3 +257,16 @@ body {
 	color: black;
 	font-size: 1.3rem;
 }
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #ffbf00;
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #ffbf00;
+}
